--- a/eurc/index.html
+++ b/eurc/index.html
@@ -223,7 +223,7 @@
                 <p> <br /> </p>
                 <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GCV5FAHGGXBDOUKST2GLBZMIGGEJSM4LAQKBGF2Z33W3DYWFGQAR6EUR">GCV5......6EUR</a></p>
                 <p> <br /> </p>
-                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for EURC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating EURC. When USD reserves are in surplus we sometimes buy AQUA tokens to increase votes for EURC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
+                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for EURC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating EURC. When USD reserves are in surplus, we sometimes buy AQUA tokens to increase votes for EURC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
                 <p> <br /> </p>
                 <p>To find out the current circulating EURC supply, find the <a href="https://stellar.expert/explorer/public/asset/EURC-GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC">total EURC supply</a> on Stellar and take away the EURC currently held by the distribution wallet & the AMMs it takes part in.</p>
             </div>
