--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="text wallets">
             <h4>What We Do</h4>
             <div>
-                <p>Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, EURC & KRWC, allowing users of Stellar to hold a representations of real world GBP, EUR & KRW within the ecosystem.</p>
+                <p>Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, EURC & KRWC, allowing users of Stellar to hold representations of the Great British Pound, South Korean Won, and Euro within the ecosystem.</p>
                 <p> <br /> </p>
                 <p>Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallets on the network. We ensure to always have enough USD in reserve to buy back all tokens that we issue.</p>
             </div>
