--- a/test/index.html
+++ b/test/index.html
@@ -5,32 +5,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Real world assets, mirrored on Stellar | Stellar Anchor UK</title>
+    <title>Liquidity management layer for Stellar | Aquarius</title>
 
     <base href="">
     <link rel="icon" type="image/png" href="assets/img/logo.png" />
     <link rel="canonical" href="/">
-    <meta property="og:site_name" content="Stellar Anchor UK">
-    <meta property="og:title" content="Real world assets, mirrored on Stellar">
-    <meta property="og:url" content="https://stellaranchoruk.xyz/">
+    <meta property="og:site_name" content="Aquarius">
+    <meta property="og:title" content="Aquarius - liquidity management layer for Stellar">
+    <meta property="og:url" content="https://aqua.network/">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Improve trading on Stellar with fiat pegged stablecoins">
-    <meta property="og:image" content="https://stellaranchoruk.xyz/images/open_graph.png">
+    <meta property="og:description" content="Designed to make Stellar DEX better.">
+    <meta property="og:image" content="https://aqua.network/assets/img/open_graph2.png">
     <meta property="og:image:width" content="1388">
     <meta property="og:image:height" content="694">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
-    <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph.png">
-    <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged stablecoins.">
-    <meta name="twitter:url" content="https://stellaranchoruk.xyz/">
-    <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph.png">
-    <meta itemprop="name" content="Stellar Anchor UK">
+    <meta name="twitter:title" content="Aquarius - new liquidity management layer for Stellar.">
+    <meta name="twitter:image" content="https://aqua.network/assets/img/open_graph2.png">
+    <meta name="twitter:description" content="Designed to make Stellar DEX better.">
+    <meta name="twitter:url" content="https://aqua.network/">
+    <meta name="twitter:image" content="https://aqua.network/assets/img/open_graph2.png">
+    <meta itemprop="name" content="Meet Aquarius">
     <meta itemprop="url" content="/">
-    <meta itemprop="description" content="Real world assets, mirrored on Stellar">
+    <meta itemprop="description" content="New liquidity management layer for Stellar">
     <meta itemprop="thumbnailUrl" content="assets/img/logo.png" format=1000w">
     <link rel="image_src" href="assets/img/logo.png" format=1000w">
     <meta itemprop="image" content="assets/img/logo.png" format=1000w">
-    <meta name="description" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
+    <meta name="description" content="Aquarius - new liquidity management layer for Stellar.">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -55,13 +55,12 @@
         <div class="menu">
             <div class="relative">
                 <nav>
-                    <a href="https://stellaranchoruk.xyz/" target="_self">Home</a>
-                    <a href="https://stellaranchoruk.xyz/gbpc/" target="_self">GBPC</a>
-                    <a href="https://stellaranchoruk.xyz/eurc/" target="_self">EURC</a>
-                    <a href="https://stellaranchoruk.xyz/krwc/" target="_self">KRWC</a>
-                    <a href="https://stellaranchoruk.xyz/yusdc/" target="_self">yUSDC</a>
-                    <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank">AQUA Voting</a>
-                    <a href="https://aqua.network/rewards/" target="_blank">AQUA Rewards</a>
+                    <a href="/rewards" class="reward-link">Rewards</a>
+                    <a href="https://vote.aqua.network/" target="_blank">Voting</a>
+                    <a href="https://locker.aqua.network/" target="_blank">Locker</a>
+                    <a href="/airdrop2" class="airdrop-link">Airdrop</a>
+                    <a href="https://gov.aqua.network/" target="_blank">Governance</a>
+                    <a href="/#roadmap" class="roadmap">Roadmap</a>
                 </nav>
                 <div class="tooltip">
                     <img src="./assets/img/fire.svg"> Vote now!
