--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -442,9 +442,9 @@
 
     <footer>
         <div class="centered-block content">
-            <div class="helpful-line">
+          <!--  <div class="helpful-line">
                 <div><img src="/icons/sauk-logo.png"></div>
-            </div>
+            </div>-->
             <div class="copyright-line">
                 <div class="copyright">
                     © 2022 stellaranchoruk.xyz
