--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-<link rel="stylesheet" href="https://stellaranchoruk.xyz/test3/info.css">
+<link rel="stylesheet" href="https://stellaranchoruk.xyz/styles/info.css">
 <div class="main-content" id="main-content">
     <header class="page-header">
         <a class="main-link" href="/"><img src="/icons/sauk-logo.png"></a>
