--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <meta itemprop="name" content="Stellar Anchor UK">
     <meta itemprop="url" content="/">
     <meta itemprop="description" content="Real world assets, mirrored on Stellar">
-    <meta itemprop="thumbnailUrl" content="images/header_image_mobile.png" format=1000w">
-    <link rel="image_src" href="images/header_image_mobile.png" format=1000w">
-    <meta itemprop="image" content="images/header_image_mobile.png" format=1000w">
+    <meta itemprop="thumbnailUrl" content="https://stellaranchoruk.xyz/images/header_image_mobile.png" format=1000w">
+    <link rel="image_src" href="https://stellaranchoruk.xyz/images/header_image_mobile.png" format=1000w">
+    <meta itemprop="image" content="https://stellaranchoruk.xyz/images/header_image_mobile.png" format=1000w">
     <meta name="description" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
