--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -8,7 +8,7 @@
     <title>Real world assets, mirrored on Stellar | Stellar Anchor UK</title>
 
     <base href="">
-    <link rel="icon" type="image/png" href="assets/img/logo.png" />
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="canonical" href="/">
     <meta property="og:site_name" content="Stellar Anchor UK">
     <meta property="og:title" content="Real world assets, mirrored on Stellar">
