--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -215,16 +215,16 @@
             <div>
                  <p>yUSDC is an asset on the Stellar network, created by Ultra Stellar. yUSDC acts as an interest earning version of Centre's USDC asset, allowing holders to earn daily yield purely by holding the asset.</p>
                  <p> <br /> </p>
-                 <p>urrently, users earn 9% a year when holding yUSDC, meaning passive earnings can be made from keeping the asset within your wallet. Payments are made daily directly into a users wallet and even yUSDC held within Stellar AMMs earn interest.</p>
+                 <p>Currently, users earn 9% a year when holding yUSDC, meaning passive earnings can be made from keeping the asset within your wallet. Payments are made daily directly into a users wallet and even yUSDC held within Stellar AMMs earn interest.</p>
                  </div>
         </div>
                                  
         <div class="text exchanges">
             <h4>Why we use yUSDC</h4>
             <div>
-                <p>From January 9, 2022, we switched our USD reserves and voted AQUA reward market over to GBPC/yUSDC.</p>
+                <p>From January 9, 2022, we started using yUSDC as our main method of holding USD reserves.</p>
                 <p> <br /> </p>
-                <p>As yUSDC earns yield daily, it allows our USD reserves to grow helping secure our buyback ability of GBPC. It also means users who contribute towards the GBPC/yUSDC AMM liquidity pool can earn yield on their USDC holdings, giving users another reason alongside AQUA rewards to hold GBPC in a liquidity pool.</p>
+                <p>As yUSDC earns yield daily, it allows our USD reserves to grow, helping secure our buyback ability across our mirrored assets. It also means users who contribute towards yUSDC AMMs paired with Stellar Anchor UK assets can earn yield on their USDC holdings.</p>
                 <p> <br /> </p>
                 <p>yXLM, yETH, and yBTC also exist, meaning there are even more opportunities to earn additional yield on Stellar with your assets.</p>
                 <p> <br /> </p>
