--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -8,7 +8,7 @@
     <title>Liquidity management layer for Stellar | Aquarius</title>
 
     <base href="">
-    <link rel="icon" type="image/png" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="https://stellaranchoruk.xyz/favicon.ico" />
     <link rel="canonical" href="/">
     <meta property="og:site_name" content="Stellar Anchor UK">
     <meta property="og:title" content="Real world assets, mirrored on Stellar">
