--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -19,10 +19,10 @@
     <meta property="og:image:width" content="1388">
     <meta property="og:image:height" content="694">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Aquarius - new liquidity management layer for Stellar.">
+    <meta name="twitter:title" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
     <meta name="twitter:image" content="https://aqua.network/assets/img/open_graph2.png">
-    <meta name="twitter:description" content="Designed to make Stellar DEX better.">
-    <meta name="twitter:url" content="https://aqua.network/">
+    <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged stablecoins.">
+    <meta name="twitter:url" content="https://stellaranchoruk.xyz/">
     <meta name="twitter:image" content="https://aqua.network/assets/img/open_graph2.png">
     <meta itemprop="name" content="Meet Aquarius">
     <meta itemprop="url" content="/">
