--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Liquidity management layer for Stellar | Aquarius</title>
+    <title>Real world assets, mirrored on Stellar | Stellar Anchor UK</title>
 
     <base href="">
     <link rel="icon" type="image/png" href="https://stellaranchoruk.xyz/favicon.ico" />
@@ -24,13 +24,13 @@
     <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged stablecoins.">
     <meta name="twitter:url" content="https://stellaranchoruk.xyz/">
     <meta name="twitter:image" content="https://aqua.network/assets/img/open_graph2.png">
-    <meta itemprop="name" content="Meet Aquarius">
+    <meta itemprop="name" content="Stellar Anchor UK">
     <meta itemprop="url" content="/">
-    <meta itemprop="description" content="New liquidity management layer for Stellar">
+    <meta itemprop="description" content="Real world assets, mirrored on Stellar">
     <meta itemprop="thumbnailUrl" content="assets/img/logo.png" format=1000w">
     <link rel="image_src" href="assets/img/logo.png" format=1000w">
     <meta itemprop="image" content="assets/img/logo.png" format=1000w">
-    <meta name="description" content="Aquarius - new liquidity management layer for Stellar.">
+    <meta name="description" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
