--- a/eurc/index.html
+++ b/eurc/index.html
@@ -59,7 +59,7 @@
                     <a href="https://stellaranchoruk.xyz/gbpc/" target="_self">GBPC</a>
                     <a href="https://stellaranchoruk.xyz/eurc/" target="_self">EURC</a>
                     <a href="https://stellaranchoruk.xyz/krwc/" target="_self">KRWC</a>
-                    <a href="https://stellaranchoruk.xyz/yusdc/" target="_self">yUSDC</a>
+                    <!-- <a href="https://stellaranchoruk.xyz/yusdc/" target="_self">yUSDC</a>-->
                     <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank">AQUA Voting</a>
                     <a href="https://aqua.network/rewards/" target="_blank">AQUA Rewards</a>
                 </nav>
