--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -210,22 +210,22 @@
             <div>
                  <p>GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX, we keep GBPC pegged to the same value as the current market rates of real world GBP & USD.</p>
                  <p> <br /> </p>
-                 <p>Users of GBPC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase GBPC are placed back into buy orders of GBPC or the GBPC AMMs, meaning there are always enough USD reserves to repurchase GBPC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
+                 <p>Users of GBPC can redeem their tokens for USDC anytime through the Stellar DEX. USDC used to purchase GBPC are placed back into buy orders of GBPC or the GBPC AMMs, meaning there are always enough USDC reserves to repurchase GBPC. A minimum spread of 1.25% is set by the issuing wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
                  <p> <br /> </p>
-                 <p>We mainly support the GBPC/yUSDC market after we moved to use Ultra Stellar yield asset yUSDC as our main store of USD reserves. Using these yield assets reinforces that GBPC stays stable and redeemable through the SDEX.</p>          
+                 <p>We mainly support the GBPC/USDC market to ensure users can always sell GBPC back to USDC, which ensures that GBPC stays stable and redeemable through the SDEX at all times.</p>          
             </div>
         </div>
                                  
         <div class="text exchanges">
             <h4>Supply</h4>
             <div>
-                <p>We ensure to always keep the GBPC buyback ability above the circulating GBPC. You can check for yourself by seeing how much USDC our distribution wallet holds inside the wallet and inside AMMs.</p>
+                <p>We ensure to always keep the GBPC buyback ability above the circulating GBPC. You can check for yourself by seeing how much USDC our issuing wallet holds.</p>
                 <p> <br /> </p>
-                <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP">GDGE......BGBP</a></p>
+                <p>Issuing wallet - <a href="https://stellar.expert/explorer/public/account/GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">GDXF......GBPC</a></p>
                 <p> <br /> </p>
-                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for AQUA rewards</a> for GBPC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating GBPC. When USD reserves are in surplus, we sometime buy AQUA tokens to increase votes for GBPC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
+                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for AQUA rewards</a> on GBPC markets, or can be partially sold to ensure USDC reserves allow us to keep our buyback ability above the circulating GBPC. When USDC reserves are in surplus, we sometime buy AQUA tokens to increase votes for GBPC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
                 <p> <br /> </p>
-                <p>To find out the current circulating GBPC supply, find the <a href="https://stellar.expert/explorer/public/asset/GBPC-GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">total GBPC supply</a> on Stellar and take away the GBPC currently held by the distribution wallet & the AMMs it takes part in.</p>
+                <p>To find out the current circulating GBPC supply, <a href="https://stellar.expert/explorer/public/asset/GBPC-GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">click here</a>. Once on stellar.expert look for the figure next to 'Total supply'.</p>
             </div>
         </div>
     
