--- a/eurc/index.html
+++ b/eurc/index.html
@@ -210,22 +210,22 @@
             <div>
                  <p>EURC is a mirror representation of the Euro on the Stellar network. Using the Stellar DEX, we keep EURC pegged to the same value as the current market rates of real world EUR & USD.</p>
                  <p> <br /> </p>
-                 <p>Users of EURC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase EURC are placed back into buy orders of EURC or the EURC AMMs, meaning there are always enough USD reserves to repurchase EURC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
+                 <p>Users of EURC can redeem their tokens for USDC anytime through the Stellar DEX. USDC used to purchase EURC are placed back into buy orders of EURC or the EURC AMMs, meaning there are always enough USDC reserves to repurchase EURC. A minimum spread of 1.25% is set by the issuing wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
                  <p> <br /> </p>
-                 <p>We mainly support the EURC/yUSDC market after we moved to use Ultra Stellar yield asset yUSDC as our main store of USD reserves. Using these yield assets reinforces that EURC stays stable and redeemable through the SDEX.</p>          
+                 <p>We mainly support the EURC/USDC market to ensure users can always sell EURC back to USDC, which ensures that EURC stays stable and redeemable through the SDEX at all times.</p>          
             </div>
         </div>
                                  
         <div class="text exchanges">
             <h4>Supply</h4>
             <div>
-                <p>We ensure to always keep the EURC buyback ability above the circulating EURC. You can check for yourself by seeing how much USD reserves our distribution wallet holds inside the wallet and inside AMMs.</p>
+                <p>We ensure to always keep the EURC buyback ability above the circulating EURC. You can check for yourself by seeing how much USDC our issuing wallet holds.</p>
                 <p> <br /> </p>
-                <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GCV5FAHGGXBDOUKST2GLBZMIGGEJSM4LAQKBGF2Z33W3DYWFGQAR6EUR">GCV5......6EUR</a></p>
+                <p>Issuing wallet - <a href="https://stellar.expert/explorer/public/account/GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC">GAP2......EURC</a></p>
                 <p> <br /> </p>
-                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for EURC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating EURC. When USD reserves are in surplus, we sometimes buy AQUA tokens to increase votes for EURC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
+                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for EURC markets, or can be partially sold to ensure USDC reserves allow us to keep our buyback ability above the circulating EURC. When USDC reserves are in surplus, we sometimes buy AQUA tokens to increase votes for EURC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
                 <p> <br /> </p>
-                <p>To find out the current circulating EURC supply, find the <a href="https://stellar.expert/explorer/public/asset/EURC-GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC">total EURC supply</a> on Stellar and take away the EURC currently held by the distribution wallet & the AMMs it takes part in.</p>
+                <p>To find out the current circulating EURC supply, <a href="https://stellar.expert/explorer/public/asset/EURC-GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC">click here</a>. Once on stellar.expert look for the figure next to 'Total supply'.</p>
             </div>
         </div>
     
