--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div>
                 <p>Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, KRWC & EURC, allowing users of Stellar to hold representations of the Great British Pound, South Korean Won, and Euro within the ecosystem.</p>
                 <p> <br /> </p>
-                <p>Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallets on the network. We ensure to always have enough USD in reserve to buy back all tokens that we issue.</p>
+                <p>Each token is backed by a USDC reserve, which is verifiable by viewing our issuing wallets on the network. We ensure to always have enough USDC in reserve to buy back all tokens that we issue.</p>
             </div>
         </div>
     
