--- a/krwc/index.html
+++ b/krwc/index.html
@@ -210,22 +210,22 @@
             <div>
                  <p>KRWC is a mirror representation of the South Korean Won on the Stellar network. Using the Stellar DEX, we keep KRWC pegged to the same value as the current market rates of real world KRW & USD.</p>
                  <p> <br /> </p>
-                 <p>Users of KRWC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase KRWC are placed back into buy orders of KRWC or the KRWC AMMs, meaning there are always enough USD reserves to repurchase KRWC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
+                 <p>Users of KRWC can redeem their tokens for USDC anytime through the Stellar DEX. USDC used to purchase KRWC are placed back into buy orders of KRWC or the KRWC AMMs, meaning there are always enough USDC reserves to repurchase KRWC. A minimum spread of 1.25% is set by the issuing wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
                  <p> <br /> </p>
-                 <p>We mainly support the KRWC/yUSDC market after we moved to use the Ultra Stellar yield asset yUSDC as our main store of USD reserves. Using these yield assets reinforces that KRWC stays stable and redeemable through the SDEX.</p>          
+                 <p>We mainly support the KRWC/USDC market to ensure users can always sell KRWC back to USDC, which ensures that KRWC stays stable and redeemable through the SDEX at all times.</p>          
             </div>
         </div>
                                  
         <div class="text exchanges">
             <h4>Supply</h4>
             <div>
-                <p>We ensure to always keep the KRWC buyback ability above the circulating KRWC. You can check for yourself by seeing how much USD reserves our distribution wallet holds inside the wallet and inside AMMs.</p>
+                <p>We ensure to always keep the KRWC buyback ability above the circulating KRWC. You can check for yourself by seeing how much USDC our issuing wallet holds.</p>
                 <p> <br /> </p>
-                <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GC7QJZNPG7FZT2C4QV7V2NJ7EGNMC4KYS2IZUSO3ZPBUNKSUMLSJZKRW">GC7Q......ZKRW</a></p>
+                <p>Issuing wallet - <a href="https://stellar.expert/explorer/public/account/GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC">GA4J......KRWC</a></p>
                 <p> <br /> </p>
-                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for AQUA rewards</a> for KRWC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating KRWC. When USD reserves are in surplus, we sometimes buy AQUA tokens to increase votes for KRWC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
+                <p>We also collect AQUA when we participate in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for AQUA rewards</a> for KRWC markets, or can be partially sold to ensure USDC reserves allow us to keep our buyback ability above the circulating KRWC. When USDC reserves are in surplus, we sometimes buy AQUA tokens to increase votes for KRWC pairs, meaning users can also earn AQUA rewards when taking part in liquidity pools or market making.</p>
                 <p> <br /> </p>
-                <p>To find out the current circulating KRWC supply, find the <a href="https://stellar.expert/explorer/public/asset/KRWC-GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC">total KRWC supply</a> on Stellar and take away the KRWC currently held by the distribution wallet & the AMMs it takes part in.</p>
+                <p>To find out the current circulating KRWC supply, <a href="https://stellar.expert/explorer/public/asset/KRWC-GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC">click here</a>. Once on stellar.expert look for the figure next to 'Total supply'.</p>
             </div>
         </div>
     
