--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -228,6 +228,10 @@
                 <p>To find out the current circulating GBPC supply, <a href="https://stellar.expert/explorer/public/asset/GBPC-GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">click here</a>. Once on stellar.expert look for the figure next to 'Total supply'.</p>
             </div>
         </div>
+        
+        <div class="text exchanges">
+            <iframe onLoad="var c=this;window.addEventListener('message',function({data,source}){if(c&&source===c.contentWindow&&data.widget===c.src)c.style.height=data.height+'px'},false);" src="https://stellar.expert/widget/public/account/balances/GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC" style="border:none;overflow:hidden;max-width:100%; min-width:300px;max-height:100%;min-height:200px;width:100%"></iframe>
+        </div>
     
   <!--      <div class="icons wallets">
             <a class="icon-container" href="https://lobstr.co/" target="_blank">
