--- a/krwc/index.html
+++ b/krwc/index.html
@@ -228,6 +228,15 @@
                 <p>To find out the current circulating KRWC supply, <a href="https://stellar.expert/explorer/public/asset/KRWC-GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC">click here</a>. Once on stellar.expert look for the figure next to 'Total supply'.</p>
             </div>
         </div>
+        
+        <section class="wallets-and-exchanges centered-block">
+            <div class="text wallets">
+            <iframe onLoad="var c=this;window.addEventListener('message',function({data,source}){if(c&&source===c.contentWindow&&data.widget===c.src)c.style.height=data.height+'px'},false);" src="https://stellar.expert/widget/public/asset/summary/KRWC-GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC" style="border:none;overflow:hidden;max-width:100%; min-width:300px;max-height:100%;min-height:477px;width:366px"></iframe>
+            </div>
+            <div class="text exchanges">
+            <iframe onLoad="var c=this;window.addEventListener('message',function({data,source}){if(c&&source===c.contentWindow&&data.widget===c.src)c.style.height=data.height+'px'},false);" src="https://stellar.expert/widget/public/account/balances/GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC" style="border:none;overflow:hidden;max-width:100%; min-width:300px;max-height:100%;min-height:477px;width:366px"></iframe>
+            </div>
+        </section>
     
   <!--      <div class="icons wallets">
             <a class="icon-container" href="https://lobstr.co/" target="_blank">
