--- a/eurc/index.html
+++ b/eurc/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Real world assets, mirrored on Stellar">
     <meta property="og:url" content="https://stellaranchoruk.xyz/">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Improve trading on Stellar with fiat pegged stablecoins">
+    <meta property="og:description" content="Improve trading on Stellar with fiat pegged mirrorcoins">
     <meta property="og:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
     <meta property="og:image:width" content="1388">
     <meta property="og:image:height" content="694">
