--- a/eurc/index.html
+++ b/eurc/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
     <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
-    <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged stablecoins.">
+    <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged mirrorcoins.">
     <meta name="twitter:url" content="https://stellaranchoruk.xyz/">
     <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
     <meta itemprop="name" content="Stellar Anchor UK">
