--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -14,14 +14,14 @@
     <meta property="og:title" content="Real world assets, mirrored on Stellar">
     <meta property="og:url" content="https://stellaranchoruk.xyz/">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Improve trading on Stellar with fiat pegged stablecoins">
+    <meta property="og:description" content="Improve trading on Stellar with fiat pegged mirrorcoins">
     <meta property="og:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
     <meta property="og:image:width" content="1388">
     <meta property="og:image:height" content="694">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
     <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
-    <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged stablecoins.">
+    <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged mirrorcoins.">
     <meta name="twitter:url" content="https://stellaranchoruk.xyz/">
     <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
     <meta itemprop="name" content="Stellar Anchor UK">
