--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -284,37 +284,37 @@
 
     <section class="current-stats">
        <div class="centered-block"><div class="title">GBPC Stats</div>
-<div class="date">July 21, 2022</div>
+<div class="date">November 10, 2022</div>
 
 <div class="table">
         <div>
-        <div class="count">£10,951</div>
+        <div class="count">£4,684</div>
         <div class="description">Circulating GBPC</div>
     </div>
 
     <div>
-        <div class="count">£11,896</div>
+        <div class="count">£6,796</div>
         <div class="description">GBPC Buyback Ability</div>
     </div>
 
     <div>
-        <div class="count">$14,161</div>
+        <div class="count">$7,671</div>
         <div class="description">USD Reserves</div>
     </div>
 
     <div>
-        <div class="count">5,128,113 AQUA</div>
-        <div class="description">AQUA Reserve</div>
+        <div class="count">10,632,835 AQUA</div>
+        <div class="description">AQUA Liquid Reserve</div>
     </div>
 
     <div>
-        <div class="count">$5,128</div>
-        <div class="description">AQUA USD Value</div>
+        <div class="count">$7,656</div>
+        <div class="description">Liquid AQUA USD Value</div>
     </div>
 
     <div>
-        <div class="count">£16,204</div>
-        <div class="description">GBPC Buyback Ability Including AQUA</div>
+        <div class="count">5,500,306 AQUA</div>
+        <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
 </div>
