--- a/eurc/index.html
+++ b/eurc/index.html
@@ -285,37 +285,37 @@
 
     <section class="current-stats">
        <div class="centered-block"><div class="title">EURC Stats</div>
-<div class="date">July 21, 2022</div>
+<div class="date">November 10, 2022</div>
 
 <div class="table">
         <div>
-        <div class="count">€0</div>
+        <div class="count">€1,404</div>
         <div class="description">Circulating EURC</div>
     </div>
 
     <div>
-        <div class="count">€66</div>
+        <div class="count">€2,557</div>
         <div class="description">EURC Buyback Ability</div>
     </div>
 
     <div>
-        <div class="count">$68</div>
+        <div class="count">$2,540</div>
         <div class="description">USD Reserves</div>
     </div>
 
     <div>
-        <div class="count">0 AQUA</div>
-        <div class="description">AQUA Reserve</div>
+        <div class="count">10,632,835 AQUA</div>
+        <div class="description">AQUA Liquid Reserve</div>
     </div>
 
     <div>
-        <div class="count">$0</div>
-        <div class="description">AQUA USD Value</div>
+        <div class="count">$7,656</div>
+        <div class="description">Liquid AQUA USD Value</div>
     </div>
 
     <div>
-        <div class="count">€66</div>
-        <div class="description">EURC Buyback Ability Including AQUA</div>
+        <div class="count">5,500,306 AQUA</div>
+        <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
 </div>
