--- a/krwc/index.html
+++ b/krwc/index.html
@@ -290,33 +290,33 @@
 
 <div class="table">
         <div>
-        <div class="count">₩8,213</div>
+        <div class="count">₩145,818</div>
         <div class="description">Circulating KRWC</div>
     </div>
 
     <div>
-        <div class="count">₩96,161</div>
+        <div class="count">₩1,678,136</div>
         <div class="description">KRWC Buyback Ability</div>
     </div>
 
     <div>
-        <div class="count">$75</div>
+        <div class="count">$1,210</div>
         <div class="description">USD Reserves</div>
     </div>
 
     <div>
-        <div class="count">0 AQUA</div>
-        <div class="description">AQUA Reserve</div>
+        <div class="count">10,632,835 AQUA</div>
+        <div class="description">AQUA Liquid Reserve</div>
     </div>
 
     <div>
-        <div class="count">$0</div>
-        <div class="description">AQUA USD Value</div>
+        <div class="count">$7,656</div>
+        <div class="description">Liquid AQUA USD Value</div>
     </div>
 
     <div>
-        <div class="count">₩96,161</div>
-        <div class="description">KRWC Buyback Ability Including AQUA</div>
+        <div class="count">5,500,306 AQUA</div>
+        <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
 </div>
