--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
     <base href="">
     <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="canonical" href="/">
-    <meta property="og:site_name" content="Stellar Anchor UK">
+    <meta property="og:site_name" content="Mirrasets">
     <meta property="og:title" content="Real world assets, mirrored on Stellar">
-    <meta property="og:url" content="https://stellaranchoruk.xyz/">
+    <meta property="og:url" content="https://mirrasets.com/">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Improve trading on Stellar with fiat pegged mirrorcoins">
-    <meta property="og:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
+    <meta property="og:image" content="https://mirrasets.com/images/open_graph2.png">
     <meta property="og:image:width" content="1388">
     <meta property="og:image:height" content="694">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
-    <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
+    <meta name="twitter:title" content="Mirrasets - Real world assets, mirrored on Stellar.">
+    <meta name="twitter:image" content="https://mirrasets.com/images/open_graph2.png">
     <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged mirrorcoins.">
-    <meta name="twitter:url" content="https://stellaranchoruk.xyz/">
-    <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
-    <meta itemprop="name" content="Stellar Anchor UK">
+    <meta name="twitter:url" content="https://mirrasets.com/">
+    <meta name="twitter:image" content="https://mirrasets.com/images/open_graph2.png">
+    <meta itemprop="name" content="Mirrasets">
     <meta itemprop="url" content="/">
     <meta itemprop="description" content="Real world assets, mirrored on Stellar">
-    <meta itemprop="thumbnailUrl" content="https://stellaranchoruk.xyz/images/header_image_mobile.png" format=1000w">
-    <link rel="image_src" href="https://stellaranchoruk.xyz/images/header_image_mobile.png" format=1000w">
-    <meta itemprop="image" content="https://stellaranchoruk.xyz/images/header_image_mobile.png" format=1000w">
-    <meta name="description" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
+    <meta itemprop="thumbnailUrl" content="https://mirrasets.com/images/header_image_mobile.png" format=1000w">
+    <link rel="image_src" href="https://mirrasets.com/images/header_image_mobile.png" format=1000w">
+    <meta itemprop="image" content="https://mirrasets.com/images/header_image_mobile.png" format=1000w">
+    <meta name="description" content="Mirrasets - Real world assets, mirrored on Stellar.">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body>
-<link rel="stylesheet" href="https://stellaranchoruk.xyz/styles/info.css">
+<link rel="stylesheet" href="https://mirrasets.com/styles/info.css">
 <div class="main-content" id="main-content">
     <header class="page-header">
         <a class="main-link" href="/"><img src="/icons/sauk-logo.png"></a>
