--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Real world assets, mirrored on Stellar | Stellar Anchor UK</title>
+    <title>Real world assets, mirrored on Stellar | Mirrasets</title>
 
     <base href="">
     <link rel="icon" type="image/png" href="favicon.ico" />
