--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <div class="menu">
             <div class="relative">
                 <nav>
-                    <a href="https://stellaranchoruk.xyz/" target="_self">Home</a>
-                    <a href="https://stellaranchoruk.xyz/gbpc/" target="_self">GBPC</a>
-                    <a href="https://stellaranchoruk.xyz/eurc/" target="_self">EURC</a>
-                    <a href="https://stellaranchoruk.xyz/krwc/" target="_self">KRWC</a>
-                    <!-- <a href="https://stellaranchoruk.xyz/yusdc/" target="_self">yUSDC</a>-->
+                    <a href="https://mirrasets.com/" target="_self">Home</a>
+                    <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
+                    <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
+                    <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
+                    <!-- <a href="https://mirrasets.com/yusdc/" target="_self">yUSDC</a>-->
                     <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank">AQUA Voting</a>
                     <a href="https://aqua.network/rewards/" target="_blank">AQUA Rewards</a>
                 </nav>
