--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -5,38 +5,38 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Real world assets, mirrored on Stellar | Stellar Anchor UK</title>
+    <title>Real world assets, mirrored on Stellar | Mirrasets</title>
 
     <base href="">
-    <link rel="icon" type="image/png" href="https://stellaranchoruk.xyz/favicon.ico" />
+    <link rel="icon" type="image/png" href="https://mirrasets.com/favicon.ico" />
     <link rel="canonical" href="/">
-    <meta property="og:site_name" content="Stellar Anchor UK">
+    <meta property="og:site_name" content="Mirrasets">
     <meta property="og:title" content="Real world assets, mirrored on Stellar">
-    <meta property="og:url" content="https://stellaranchoruk.xyz/">
+    <meta property="og:url" content="https://mirrasets.com/">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Improve trading on Stellar with fiat pegged mirrorcoins">
-    <meta property="og:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
+    <meta property="og:image" content="https://mirrasets.com/images/open_graph2.png">
     <meta property="og:image:width" content="1388">
     <meta property="og:image:height" content="694">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
-    <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
+    <meta name="twitter:title" content="Mirrasets - Real world assets, mirrored on Stellar.">
+    <meta name="twitter:image" content="https://mirrasets.com/images/open_graph2.png">
     <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged mirrorcoins.">
-    <meta name="twitter:url" content="https://stellaranchoruk.xyz/">
-    <meta name="twitter:image" content="https://stellaranchoruk.xyz/images/open_graph2.png">
+    <meta name="twitter:url" content="https://mirrasets.com/">
+    <meta name="twitter:image" content="https://mirrasets.com/images/open_graph2.png">
     <meta itemprop="name" content="Stellar Anchor UK">
     <meta itemprop="url" content="/">
     <meta itemprop="description" content="Real world assets, mirrored on Stellar">
     <meta itemprop="thumbnailUrl" content="assets/img/logo.png" format=1000w">
     <link rel="image_src" href="assets/img/logo.png" format=1000w">
     <meta itemprop="image" content="assets/img/logo.png" format=1000w">
-    <meta name="description" content="Stellar Anchor UK - Real world assets, mirrored on Stellar.">
+    <meta name="description" content="Mirrasets - Real world assets, mirrored on Stellar.">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body>
-<link rel="stylesheet" href="https://stellaranchoruk.xyz/styles/info.css">
+<link rel="stylesheet" href="https://mirrasets.com/styles/info.css">
 <div class="main-content" id="main-content">
     <header class="page-header">
         <a class="main-link" href="/"><img src="/icons/sauk-logo.png"></a>
@@ -55,11 +55,11 @@
         <div class="menu">
             <div class="relative">
                 <nav>
-                    <a href="https://stellaranchoruk.xyz/" target="_self">Home</a>
-                    <a href="https://stellaranchoruk.xyz/gbpc/" target="_self">GBPC</a>
-                    <a href="https://stellaranchoruk.xyz/eurc/" target="_self">EURC</a>
-                    <a href="https://stellaranchoruk.xyz/krwc/" target="_self">KRWC</a>
-                    <!-- <a href="https://stellaranchoruk.xyz/yusdc/" target="_self">yUSDC</a>-->
+                    <a href="https://mirrasets.com/" target="_self">Home</a>
+                    <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
+                    <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
+                    <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
+                    <!-- <a href="https://mirrasets.com/yusdc/" target="_self">yUSDC</a>-->
                     <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank">AQUA Voting</a>
                     <a href="https://aqua.network/rewards/" target="_blank">AQUA Rewards</a>
                 </nav>
