--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </div>-->
     
         <div class="text exchanges">
-            <a class="twitter-timeline" data-width="350" data-height="550" data-theme="light" href="https://twitter.com/StellarAnchorUK?ref_src=twsrc%5Etfw">Tweets by StellarAnchorUK</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" data-width="1200" data-height="1600" data-theme="light" href="https://twitter.com/Mirrasets?ref_src=twsrc%5Etfw">Tweets by Mirrasets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     
    <!--     <div class="icons exchanges">
