--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
             </a>
         </div>-->
     
-         <!-- <div class="text exchanges">
-            <a class="twitter-timeline" data-width="1200" data-height="800" data-theme="light" href="https://twitter.com/Mirrasets?ref_src=twsrc%5Etfw">Tweets by Mirrasets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>-->
+          <div class="text exchanges">
+            <a class="twitter-timeline" data-width="800" data-height="800" data-theme="light" href="https://twitter.com/Mirrasets?ref_src=twsrc%5Etfw">Tweets by Mirrasets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
     
    <!--     <div class="icons exchanges">
             <a class="icon-container" href="https://www.liquid.com/" target="_blank">
