--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -284,36 +284,36 @@
 
     <section class="current-stats">
        <div class="centered-block"><div class="title">GBPC Stats</div>
-<div class="date">December 18, 2022</div>
+<div class="date">February 1, 2022</div>
 
 <div class="table">
         <div>
-        <div class="count">£5,641</div>
-        <div class="description">Circulating GBPC</div>
+        <div class="count">£5,012</div>
+        <div class="description">Public Circulating GBPC</div>
     </div>
 
     <div>
-        <div class="count">£4,663</div>
+        <div class="count">£6,509</div>
         <div class="description">GBPC Buyback Ability</div>
     </div>
 
     <div>
-        <div class="count">$6,823</div>
+        <div class="count">$7,953</div>
         <div class="description">USD Reserves</div>
     </div>
 
     <div>
-        <div class="count">2,476,764 AQUA</div>
+        <div class="count">6,206,753 AQUA</div>
         <div class="description">AQUA Liquid Reserve</div>
     </div>
 
     <div>
-        <div class="count">$1,947</div>
+        <div class="count">$3,938</div>
         <div class="description">Liquid AQUA USD Value</div>
     </div>
 
     <div>
-        <div class="count">10,500,306 AQUA</div>
+        <div class="count">19,900,306 AQUA</div>
         <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
