--- a/eurc/index.html
+++ b/eurc/index.html
@@ -285,36 +285,36 @@
 
     <section class="current-stats">
        <div class="centered-block"><div class="title">EURC Stats</div>
-<div class="date">December 16, 2022</div>
+<div class="date">February 1, 2022</div>
 
 <div class="table">
         <div>
-        <div class="count">€1,496</div>
+        <div class="count">€4,692</div>
         <div class="description">Circulating EURC</div>
     </div>
 
     <div>
-        <div class="count">€2,174</div>
+        <div class="count">€6,423</div>
         <div class="description">EURC Buyback Ability</div>
     </div>
 
     <div>
-        <div class="count">$2,298</div>
+        <div class="count">$6,960</div>
         <div class="description">USD Reserves</div>
     </div>
 
     <div>
-        <div class="count">2,476,764 AQUA</div>
+        <div class="count">6,206,753 AQUA</div>
         <div class="description">AQUA Liquid Reserve</div>
     </div>
 
     <div>
-        <div class="count">$1,947</div>
+        <div class="count">$$3,938</div>
         <div class="description">Liquid AQUA USD Value</div>
     </div>
 
     <div>
-        <div class="count">10,500,306 AQUA</div>
+        <div class="count">19,900,306 AQUA</div>
         <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
