--- a/krwc/index.html
+++ b/krwc/index.html
@@ -305,7 +305,7 @@
     </div>
 
     <div>
-        <div class="count">7,365,856 AQUA</div>
+        <div class="count">♒️7,365,856 AQUA</div>
         <div class="description">AQUA Liquid Reserve</div>
     </div>
 
