--- a/krwc/index.html
+++ b/krwc/index.html
@@ -305,7 +305,7 @@
     </div>
 
     <div>
-        <div class="count">♒️7,365,856 AQUA</div>
+        <div class="count">♒︎ 7,365,856</div>
         <div class="description">AQUA Liquid Reserve</div>
     </div>
 
@@ -315,7 +315,7 @@
     </div>
 
     <div>
-        <div class="count">100,000,306 AQUA</div>
+        <div class="count">♒︎ 100,000,306</div>
         <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
