--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -303,7 +303,7 @@
     </div>
 
     <div>
-        <div class="count">7,365,856 AQUA</div>
+        <div class="count">♒︎ 7,365,856</div>
         <div class="description">AQUA Liquid Reserve</div>
     </div>
 
@@ -313,7 +313,7 @@
     </div>
 
     <div>
-        <div class="count">100,000,306 AQUA</div>
+        <div class="count">♒︎ 100,000,306</div>
         <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
