--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -41,6 +41,13 @@
           max-width: 100% !important;
         }
       }
+      /* Override social links to show on all devices */
+      header.page-header .social-links {
+        display: flex !important;
+      }
+      header.page-header .social-links .stay-in-touch {
+        display: block !important;
+      }
     </style>
   </head>
   <body>
@@ -111,7 +118,7 @@
         <div class="centered-block content">
           <div class="copyright-line">
             <div class="copyright">
-              © 2025 mirrasets.com
+              © 2023 mirrasets.com
             </div>
           </div>
         </div>
